feat: add opencv to get image from camera

--- a/pam/Makefile
+++ b/pam/Makefile
@@ -1,21 +1,20 @@
 .PHONY: build test clean pam.o identify.o
 
-CXX=g++ -fPIC
-
-# build: pam.o
-# 	sudo ld -x --shared pam.o -o /usr/lib/x86_64-linux-gnu/security/pam_facepass.so
+CXX=g++ -std=c++17 -fPIC
+CXXFLAGS=-I/usr/include/opencv4
 
 build: pam.o identify.o
-	ld -r pam.o identify.o -o facepass.o
-	sudo ld -x --shared facepass.o -o /usr/lib/x86_64-linux-gnu/security/pam_facepass.so
+	# ld -r pam.o identify.o -o facepass.o
+	$(CXX) -shared pam.o identify.o -o pam_facepass.so
+	sudo mkdir -p /lib/security
+	sudo ld -x --shared -o /lib/security/pam_facepass.so pam_facepass.so
 
 pam.o: 
-	$(CXX) -c pam.cc -o pam.o
+	$(CXX) $(CXXFLAGS) -c pam.cc -o pam.o
 identify.o:
-	$(CXX) -c identify.cc -o identify.o
+	$(CXX) $(CXXFLAGS) -c identify.cc -o identify.o
 
 test:
 	g++ -o pam_test test.cc -lpam -lpam_misc
 clean:
 	rm -f *.o *.so
-	
