fix(Makefile): use g++ linker instead of `ld` GNU linker

--- a/pam/Makefile
+++ b/pam/Makefile
@@ -1,13 +1,12 @@
 .PHONY: build test clean pam.o identify.o
 
-CXX=g++ -std=c++17 -fPIC
+CXX=g++ -fPIC
 CXXFLAGS=-I/usr/include/opencv4
 
 build: pam.o identify.o
-	# ld -r pam.o identify.o -o facepass.o
-	$(CXX) -shared pam.o identify.o -o pam_facepass.so
+	$(CXX) -shared pam.o identify.o -o facepass.o
 	sudo mkdir -p /lib/security
-	sudo ld -x --shared -o /lib/security/pam_facepass.so pam_facepass.so
+	sudo mv facepass.o /lib/security/pam_facepass.so
 
 pam.o: 
 	$(CXX) $(CXXFLAGS) -c pam.cc -o pam.o
