--- a/src/Makefile
+++ b/src/Makefile
@@ -4,4 +4,4 @@ CXX=g++ -fPIC -std=c++17
 CXXFLAGS=`pkg-config opencv4 --cflags --libs`
 
 build: 
-	$(CXX) $(CXXFLAGS) main.cc -o main
+	$(CXX) main.cc -o main $(CXXFLAGS)
