feat(cli): capture face

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,18 @@
 cmake_minimum_required(VERSION 3.22)
 project(facepass)
 
+# Require C++17
 set(CMAKE_CXX_STANDARD          17)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
-set(CLI_SOURCES 
-    cli/add_face.h
-    cli/add_face.cc
-    cli/main.cc
-)
-add_executable(facepass ${CLI_SOURCES})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS} ${OpenCV_CFLAGS_OTHER}")
 
+# Find dependencies
+SET(Torch_DIR external/libtorch/share/cmake/Torch)
+find_package(Torch REQUIRED)
 find_package(OpenCV REQUIRED)
-include_directories(${OpenCV_INCLUDE_DIRS})
-target_link_libraries(facepass ${OpenCV_LIBS} )
+
+add_subdirectory(lib/face_detection)
+set(FaceDetection_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/lib/face_detection)
+add_subdirectory(cli)
+
