--- a/auth/CMakeLists.txt
+++ b/auth/CMakeLists.txt
@@ -8,8 +8,9 @@ target_include_directories(${PAM} PRIVATE
     ${TORCH_INCLUDE_DIRS}
     ${FaceDetection_INCLUDE_DIRS}
     ${FaceRecognition_INCLUDE_DIRS}
+    ${FaceConfig_INCLUDE_DIRS}
 )
 target_link_libraries(${PAM}
     ${OpenCV_LIBS} ${TORCH_LIBRARIES}
-    face_detection face_recognition
+    face_detection face_recognition face_config
 )
