--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ set(FaceConfig_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/lib/config)
 add_subdirectory(cli)
 add_subdirectory(auth)
 add_subdirectory(test/face_engine)
+add_subdirectory(test/pam)
