--- a/auth/CMakeLists.txt
+++ b/auth/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(PAM pam_facepass)
+set(PAM facepass_pam)
 add_library(${PAM} SHARED
     pam.cc
     identify.cc
@@ -12,5 +12,5 @@ target_include_directories(${PAM} PRIVATE
 )
 target_link_libraries(${PAM}
     ${OpenCV_LIBS} ${TORCH_LIBRARIES}
-    face_detection face_recognition face_config
+    facepass_det facepass_reg facepass_cfg
 )
