--- a/lib/config/CMakeLists.txt
+++ b/lib/config/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(face_config SHARED face_config.cc)
+add_library(facepass_cfg SHARED face_config.cc)
 set(FaceConfig_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
