--- a/lib/face_detection/CMakeLists.txt
+++ b/lib/face_detection/CMakeLists.txt
@@ -1,12 +1,12 @@
-add_library(face_detection SHARED
+add_library(facepass_det SHARED
     face_detection.cc
     utils.cc
 )
 set(FaceDetection_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
-target_include_directories(face_detection PRIVATE
+target_include_directories(facepass_det PRIVATE
     ${OpenCV_INCLUDE_DIRS}
     ${TORCH_INCLUDE_DIRS}
 )
-target_include_directories(face_detection PUBLIC
+target_include_directories(facepass_det PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
