--- a/lib/face_recognition/CMakeLists.txt
+++ b/lib/face_recognition/CMakeLists.txt
@@ -1,11 +1,11 @@
-add_library(face_recognition SHARED
+add_library(facepass_reg SHARED
     face_recognition.cc
 )
 set(FaceRecognition_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
-target_include_directories(face_recognition PRIVATE
+target_include_directories(facepass_reg PRIVATE
     ${OpenCV_INCLUDE_DIRS}
     ${TORCH_INCLUDE_DIRS}
 )
-target_include_directories(face_recognition PUBLIC
+target_include_directories(facepass_reg PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
