--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,6 +22,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: |
+          sudo apt install libopencv-dev libpam0g-dev libcli11-dev
+          mkdir -p external && cd external
+          wget -O libtorch.zip https://download.pytorch.org/libtorch/nightly/cpu/libtorch-cxx11-abi-shared-without-deps-2.2.0.dev20231031%2Bcpu.zip
+          unzip libtorch.zip
+
       - name: Configure CMake
         env:
           PROJECT_VERSION: ${{github.ref_name}}
