--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,11 @@
 cmake_minimum_required(VERSION 3.22)
 project(facepass)
-set(PROJECT_VERSION 0.1.0)
 if(DEFINED ENV{PROJECT_VERSION})
     message(STATUS "Project version: $ENV{PROJECT_VERSION}")
     set(PROJECT_VERSION $ENV{PROJECT_VERSION})
 else()
     message(STATUS "Project version: latest")
-    set(PROJECT_VERSION latest)
+    set(PROJECT_VERSION 0.1.0)
 endif()
 
 # Require C++17
@@ -17,6 +16,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS} ${OpenCV_CFLAGS_OTHER
 
 # Find dependencies
 SET(Torch_DIR external/libtorch/share/cmake/Torch)
+
 find_package(Torch REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(CLI11 CONFIG REQUIRED)
@@ -53,7 +53,7 @@ SET(CPACK_PACKAGE_NAME ${PROJECT_NAME})
 SET(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
 SET(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Facepass is a face recognition authentication system.")
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libopencv-dev, libpam0g-dev, libcli11-dev")
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libpam0g-dev, libcli11-dev, libopencv-dev")
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Nguyen Phuc Vinh & Tran Trung Thai") #required
 
 INCLUDE(CPack)
