feat: add anti-spoofing functionality and update related configurations
- Introduced anti-spoofing library and integrated it into the build system.
- Updated PAM authentication to include anti-spoofing option.
- Modified face detection and recognition logic to support anti-spoofing.
- Enhanced documentation for build instructions and configuration.

--- a/auth/CMakeLists.txt
+++ b/auth/CMakeLists.txt
@@ -2,15 +2,17 @@ set(PAM facepass_pam)
 add_library(${PAM} SHARED
     pam.cc
     identify.cc
+    anti_spoof.cc
 )
 target_include_directories(${PAM} PRIVATE
     ${OpenCV_INCLUDE_DIRS}
     ${TORCH_INCLUDE_DIRS}
     ${FaceDetection_INCLUDE_DIRS}
+    ${FaceAntiSpoof_INCLUDE_DIRS}
     ${FaceRecognition_INCLUDE_DIRS}
     ${FaceConfig_INCLUDE_DIRS}
 )
 target_link_libraries(${PAM}
     ${OpenCV_LIBS} ${TORCH_LIBRARIES}
-    facepass_det facepass_reg facepass_cfg
+    facepass_det facepass_reg facepass_cfg facepass_as
 )
