--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,11 @@ find_package(CLI11 CONFIG REQUIRED)
 add_subdirectory(lib/config)
 add_subdirectory(lib/face_detection)
 add_subdirectory(lib/face_recognition)
+add_subdirectory(lib/face_as)
 
 set(FaceDetection_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/lib/face_detection)
 set(FaceRecognition_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/lib/face_recognition)
+set(FaceAntiSpoof_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/lib/face_as)
 set(FaceConfig_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/lib/config)
 
 add_subdirectory(cli)
