--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -1,13 +1,18 @@
 set(CLI ${PROJECT_NAME})
+
+file(GLOB CMD_SOURCES "cmd/*.cc")
 add_executable(${CLI} main.cc
-    add_face.cc
-    remove_face.cc
+    face.cc
+    pam_conf.cc
+    ${CMD_SOURCES}
 )
 target_include_directories(${CLI} PRIVATE 
     ${OpenCV_INCLUDE_DIRS}
     ${TORCH_INCLUDE_DIRS}
     ${FaceDetection_INCLUDE_DIRS}
     ${FaceConfig_INCLUDE_DIRS}
+    ${CMAKE_CURRENT_SOURCE_DIR} # Add the parent directory
+    ${CMAKE_CURRENT_SOURCE_DIR}/cmd
 )
 target_link_libraries(${CLI} PRIVATE
     ${OpenCV_LIBS} ${TORCH_LIBRARIES}
