fix: include facepass_as target in installation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ add_subdirectory(test/face_engine)
 add_subdirectory(test/pam)
 
 install(
-    TARGETS ${PROJECT_NAME} facepass_cfg facepass_det facepass_reg 
+    TARGETS ${PROJECT_NAME} facepass_cfg facepass_det facepass_reg facepass_as
     COMPONENT applications
     RUNTIME DESTINATION "/usr/bin"
     LIBRARY DESTINATION "/usr/lib"
